@@ -210,6 +210,11 @@ gboolean gel_mod_integer_rational (mpw_t num, mpw_t mod);
 
 mpw_ptr gel_find_pre_function_modulo (GelCtx *ctx);
 
+
+/*compare nodes, return TRUE if equal
+  makes them the same type as a side effect*/
+gboolean gel_eqlnodes (GelETree *l, GelETree *r);
+
 #define GET_ABCDE(n,a,b,c,d,e) { \
 	(a) = (n)->op.args; \
 	(b) = (n)->op.args->any.next; \
