@@ -1,3 +1,14 @@
+Thu Jul 13 10:53:54 2006  George (Jiri) Lebl <jirka@5z.com>
+
+	* lib/sets/basic.gel, src/funclib.c, src/eval.[ch]: Implement IsIn,
+	  Intersection and SetMinus in C for speed
+
+	* lib/linear_algebra/subspaces.gel,
+	  lib/linear_algebra/linear_algebra.gel:  Minor speed improvements
+	  to NullSpace
+
+	* src/geniustests.txt: add some more tests
+
 Thu Jul 13 08:56:10 2006  George (Jiri) Lebl <jirka@5z.com>
 
 	* src/eval.c: fix leaks
